# botwork

./: config.py  controller.py  data.json  data.program1.json  data.program2.json  data.program3.json  db.py  db_class.py  discord.controller.py  discordCl.py  main.py  productId.json  pyproject.toml  scrape.py  shoe1.json  shoe2.json  shoes_database.db  stockLevel.py  stylecolor.json  test.json  updates.py
